src/app/section-experience/section-experience.component.scss
@import '../shared/abstracts/variables';
@import '../shared/abstracts/mixins';

.tree {
    // important to have the padding even when not visible or else rendering will be wrong
    line-height: 2rem;
    font-size: 3rem;
    padding-left: 10rem;
    color: $color-secondary-line;

    @include respond(phone) {
        padding-left: 5rem;
    }

    & .tree__branch--vertical:after {
        display: inline;
        position: absolute;
        content: '';
        margin-left: 5rem;
    }
}

.is-visible {
    .tree {
        &__text {
            cursor: pointer;
            font-size: 2.5rem;
            margin-left: $branch-width + .5rem;
            padding: 5px;
            color: $color-secondary-line;
        }

        &__text:active {
            background-color: $color-tertiary-highlight;
            color: $color-secondary-text;
        }

        &__subtree {

            &--expand {
                opacity: 1;

                & .tree__branch--vertical {
                    animation-delay: 2s;
                }

                & .tree__branch--vertical:first-child:after {
                    margin-top: 20px;
                }

                & .tree__branch--vertical:after {
                    @include tree-branch-line(3px, 0px);
                    @include increase-height-animation($branch-height);
                    animation-delay: 2s;
                }

                & .tree__branch--horizontal {
                    @include tree-branch-line(0px, 3px);
                    @include increase-width-animation;
                    animation-delay: 3s;
                    margin-left: 5rem;
                }

                & .tree__text {
                    @include fade-in;
                }
            }

            &--collapse {
                opacity: 0;
                height: 0;
            }
        }

        &__subtree--collapse+.tree__branch--vertical {
            @keyframes move-up-illusion {
                0% {
                    height: 12rem;
                }

                100% {
                    height: 6rem;
                }
            }

            animation: move-up-illusion 2s;
            animation-fill-mode: forwards;
        }

        & li {
            list-style: none;
        }

        &__branch {
            &--vertical {
                @include tree-branch-line(3px, 0px);
                @include increase-height-animation($branch-height);
            }

            &--horizontal {
                @include tree-branch-line(0px, 3px);
                @include increase-width-animation;
                animation-delay: 1s;
            }
        }
    }
}

.tree__text--selectable.selected {
    background-color: $color-tertiary-highlight !important;
    color: $color-secondary-text !important;
}

#citi {
    cursor: auto;
}


.section-experience {
    background-color: $color-background;

    &:not(:first-child) {
        padding: 5rem 0;
    }

    min-height: 70vh;

    .fx {
        .work-experience--title {
            width: 60rem;

            @include respond(phone) {
                width: $work-experience-mobile-width;
            }
        }
    }

    .commodities {
        .work-experience--title {
            width: 70rem;

            @include respond(phone) {
                width: $work-experience-mobile-width;
            }
        }
    }

    .sky {
        .work-experience--title {
            width: 60rem;

            @include respond(phone) {
                width: 100%
            }
        }
    }

    .work-experience {
        @include respond(phone) {
            width: $work-experience-mobile-width;
        }

        &--child {
            margin-top: 3rem;
        }
    }

    .is-visible {
        .work-experience {

            &--details {
                opacity: 0;
                animation: 2s moveInRightDelay;
                animation-delay: 5s;
                animation-fill-mode: forwards;

                @keyframes moveInRightDelay {
                    0% {
                        transform: translateX(5rem);
                    }

                    100% {
                        opacity: 1;
                        transform: translate(0);
                    }
                }
            }


            padding-top: calc(#{$branch-height} / 2);

            &--title {
                overflow: hidden; // make it work for desktop again
            }

            @include respond(phone) {
                &--title {
                    .work-experience--mobilefirsttitle {
                        animation: typing 2s steps(40, end), blink-caret 0.75s step-end infinite;
                        overflow: hidden;
                        white-space: nowrap;
                        width: $work-experience-mobile-width;
                        // display: inline-block;
                    }
    
                    .work-experience--mobilesecondtitle {
                        animation: type2 2s steps(40, end), blink-caret 0.75s step-end infinite;
                        animation-delay: 2.5s;
                        opacity: 0;
                        overflow: hidden;
                        white-space: nowrap;
                        width: $work-experience-mobile-width; // *0.6 for fx
                        // display: inline-block;
                        animation-fill-mode: forwards; // so opacity is 1 in the end
                    }
                }
            }

        }
    }
}

@keyframes typing {
    0% {
        width: 0;
        border-right: 0.15em solid orange;
    }

    99.9% {
        border-right: 0.15em solid orange;
    }

    100% {
        border: none;
    }
}

@keyframes type2 {
    0% {
      width: 0;
      border-right: 0.15em solid orange;
    }
    1% {
      opacity: 1;
    }
    99.9% {
      border-right: 0.15em solid orange;
    }
    100% {
      opacity: 1;
      border: none;
    }
  }
  

@keyframes blink-caret {

    from, to {
        border-color: transparent
    }

    20% {
        border-color: orange;
    }
}

